# Research-Mind

./: pyproject.toml
frontend/: index.html  package-lock.json
frontend/src/: App.tsx
frontend/src/components/: Navbar.tsx  ResearchDashboard.tsx
researchmind/: README.md  app.py  functions.py  main.ipynb  main.py  models.py  new_agents.py  research_assistant.py
researchmind/api/: main.py
researchmind/researcher/: research_assistant.py
utils/: main.ipynb
